# EDS

./: LICENSE  README.md
benchmarks/: profile.sh
benchmarks/data/scripts/: generate.sh  makeLoom.py
benchmarks/parsers/: readCsv.R  readEDS.R  readEds.R  readH5.R  readLoom.R  readMtx.R
benchmarks/stats/: ltime.tex  memory.tex  size.tex
src-cpp/: readEDS.cpp
src-rs/: Cargo.toml
src-rs/src/: csv.rs  eds.rs  h5.rs  lib.rs  main.rs  mtx.rs  parse.rs  prior.rs  utils.rs  write.rs
