[package]
name = "eds"
version = "0.1.0"
authors = ["avisrivastava <asrivastava@cs.stonybrook.edu>, Mike Love, Rob Patro"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.3.0"
clap = "2.33.0"
log = "0.4.6"
byteorder = "1.3.1"
flate2 = "1.0.7"
libmath = "0.2.1"
hdf5 = "0.5.2"
rand = "0.7.0"
rayon = "1.2.0"

[lib]
name = "eds"
path = "src/lib.rs"

[[bin]]
name = "eds"
path = "src/main.rs"
